      DilateImage, ErodeImage, SpatialFilter, UnaryMaths, BinaryMaths, MultiImageMaths
* ENH: added support for networx 1.4 and improved iterable expansion
* ENH: Replaced BEDPOSTX and EddyCurrent with nipype pipelines 
* ENH: Ability to create a hierarchical dot file
* ENH: Improved debugging information for rerunning nodes
* ENH: Added 'stop_on_first_rerun' option

* BF: dcm2nii interface handles gzipped files correctly
* BF: FNIRT generates proper outputs
* BF: fsl.DTIFit now properly collects tensor volume
* BF: updatehash now removes old result hash file

Release 0.3.4 (Jan 12, 2011)
============================

* API: hash values for float use a string conversion up to the 10th decimal place.
* API: Iterables in output path will always be generated as _var1_val1_var2_val2 pairs

* ENH: Added support to nipy: GLM fit, contrast estimation and calculating mask from EPI
* ENH: Added support for manipulating surface files in Freesurfer:
    - projecting volume images onto the surface
    - smoothing along the surface
    - transforming a surface image from one subject to another
    - using tksurfer to save pictures of the surface
* ENH: Added support for flash processing using FreeSurfer
* ENH: Added support for flirt matrix in BBRegister
* ENH: Added support for FSL convert_xfm
* ENH: hashes can be updated again without rerunning all nodes.
* ENH: Added multiple regression design for FSL
* ENH: Added SPM based Analyze to Nifti converter
* ENH: Added increased support for PyXNAT
* ENH: Added support for MCR-based binary version of SPM
* ENH: Added SPM node for calculating various threshold statistics
* ENH: Added distance and dissimilarity measurements

* BF: Diffusion toolkit gets installed 
* BF: Changed FNIRT interface to accept flexible lists (rather than 4-tuples)
      on all options specific to different subsampling levels

Release 0.3.3 (Sep 16, 2010)
============================

* API: subject_id in ModelSpec is now deprecated
* API: spm.Threshold 